--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <!-- branch.io key :) -->
+        <meta-data
+            android:name="io.branch.sdk.BranchKey"
+            android:value="key_live_coDBaiGnKAZN1BRRBj691mbiFAohoMxv"/>
+
         <!-- <meta-data -->
         <!-- android:name="com.google.android.maps.v2.API_KEY" -->
         <!-- android:value="AIzaSyCYt97amwvQd_yV3Zgk8snnJAzCly8So98"/> -->
