--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         <!-- branch.io key :) -->
         <meta-data
             android:name="io.branch.sdk.BranchKey"
-            android:value="key_live_coDBaiGnKAZN1BRRBj691mbiFAohoMxv"/>
+            android:value="key_live_coDBaiGnKAZN1BRRBj691mbiFAohoMxv" />
 
         <!-- <meta-data -->
         <!-- android:name="com.google.android.maps.v2.API_KEY" -->
@@ -57,9 +57,10 @@
             </intent-filter>
         </receiver>
 
-
         <!-- Branch testing (TestMode "true" to simulate fresh installs) -->
-        <meta-data android:name="io.branch.sdk.TestMode" android:value="true" />
+        <meta-data
+            android:name="io.branch.sdk.TestMode"
+            android:value="true" />
 
         <activity
             android:name=".shared.main.activity.MainActivity"
@@ -75,8 +76,12 @@
 
             <!-- Branch URI scheme -->
             <intent-filter>
-                <data android:scheme="thesquare" android:host="open" />
+                <data
+                    android:host="open"
+                    android:scheme="thesquare" />
+
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
@@ -226,25 +231,34 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBarMain" />
 
-        <!-- Used for Google Play Store Campaign Measurement-->
-        <receiver android:name="com.google.android.gms.analytics.CampaignTrackingReceiver"
+        <!-- Used for Google Play Store Campaign Measurement -->
+        <receiver
+            android:name="com.google.android.gms.analytics.CampaignTrackingReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
         </receiver>
-        <service android:name="com.google.android.gms.analytics.CampaignTrackingService"
+
+        <service
+            android:name="com.google.android.gms.analytics.CampaignTrackingService"
             android:enabled="true"
             android:exported="true" />
-        <receiver android:name="com.google.android.gms.analytics.AnalyticsReceiver"
+
+        <receiver
+            android:name="com.google.android.gms.analytics.AnalyticsReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH" />
             </intent-filter>
         </receiver>
-        <service android:name="com.google.android.gms.analytics.AnalyticsService"
+
+        <service
+            android:name="com.google.android.gms.analytics.AnalyticsService"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false" />
+
     </application>
+
 </manifest>
