--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,6 @@ dependencies {
     compile 'io.branch.sdk.android:library:2.+'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    compile 'io.intercom.android:intercom-sdk:3.+'
+
 }
