--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.hellobaytree.graftrs.graftrs"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 17
-        versionName "1.0.16"
+        versionCode 18
+        versionName "1.0.17"
         multiDexEnabled true
     }
 
@@ -94,9 +94,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
-    compile 'io.intercom.android:intercom-sdk:3.+'
-    compile 'io.intercom.android:intercom-sdk-base:3.+'
-    compile 'io.intercom.android:intercom-sdk-fcm:3.+'
+//    compile 'io.intercom.android:intercom-sdk:3.+'
+//    compile 'io.intercom.android:intercom-sdk-base:3.+'
+//    compile 'io.intercom.android:intercom-sdk-fcm:3.+'
 
 }
 
