google project credentials updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyBG5FUoGekEGxW-MvNmYBVkGSVhHbXuZDI" />
 
         <!-- branch.io key :) -->
         <meta-data
