understanding price plan initial

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "construction.thesquare"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 28
-        versionName "1.0.28"
+        versionCode 29
+        versionName "1.0.29"
         multiDexEnabled true
     }
     signingConfigs {
@@ -65,12 +65,12 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
-    testCompile 'junit:junit:4.12'
     //    compile 'io.intercom.android:intercom-sdk:3.+'
 
     //    compile 'io.intercom.android:intercom-sdk-base:3.+'
 
     //    compile 'io.intercom.android:intercom-sdk-fcm:3.+'
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
@@ -99,6 +99,7 @@ dependencies {
     compile 'com.hbb20:ccp:1.7.1'
     compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
     compile 'io.branch.sdk.android:library:2.+'
+    compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
