--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,13 +51,11 @@ buildscript {
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
     }
-    dependencies {
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    dependencies { 
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
-apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'io.fabric'
 
 dependencies {
@@ -71,7 +69,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
-    compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.google.android.gms:play-services-places:10.2.0'
     compile 'com.google.android.gms:play-services-auth:10.2.0'
     compile 'com.google.android.gms:play-services-identity:10.2.0'
@@ -97,7 +94,15 @@ dependencies {
     }
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     testCompile 'junit:junit:4.12'
-    apt 'com.jakewharton:butterknife-compiler:8.0.1'
+
+    // butter knife
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    // dagger
+    compile "com.google.dagger:dagger:2.9"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.9"
+    provided 'javax.annotation:jsr250-api:1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
