--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,14 @@ android {
     }
 }
 
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        showStandardStreams true
+    }
+}
+
 buildscript {
     repositories {
         mavenCentral()
