inputvalidator login unit tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,11 @@ dependencies {
         exclude module: 'answers-shim'
     }
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
+
+    // testing
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.+'
+    testCompile 'org.assertj:assertj-core:1.+'
 
     // butter knife
     compile 'com.jakewharton:butterknife:8.5.1'
