loginForm robolectric test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.+'
     testCompile 'org.assertj:assertj-core:1.+'
+    testCompile 'org.robolectric:robolectric:3.1.2'
+    testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
 
     // butter knife
     compile 'com.jakewharton:butterknife:8.5.1'
