--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,25 +31,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <service android:name=".shared.fcm.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
         <service android:name=".shared.fcm.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBG5FUoGekEGxW-MvNmYBVkGSVhHbXuZDI" />
@@ -59,11 +54,13 @@
         <meta-data
             android:name="io.branch.sdk.BranchKey"
             android:value="key_live_fdFtcGj8AL3fzR5zFq0PVefoEroHpjez" />
-        <!--<meta-data android:name="io.branch.sdk.BranchKey.test"-->
-        <!--android:value="key_test_cdAFbKg1rGWcEOXrqyZIYihnEClSiakK" />-->
+        <!-- <meta-data android:name="io.branch.sdk.BranchKey.test" -->
+        <!-- android:value="key_test_cdAFbKg1rGWcEOXrqyZIYihnEClSiakK" /> -->
 
-        <!--&lt;!&ndash; Branch testing (TestMode "true" to simulate fresh installs on dev environment) &ndash;&gt;-->
-        <!--<meta-data android:name="io.branch.sdk.TestMode" android:value="true" />-->
+
+        <!-- &lt;!&ndash; Branch testing (TestMode "true" to simulate fresh installs on dev environment) &ndash;&gt; -->
+        <!-- <meta-data android:name="io.branch.sdk.TestMode" android:value="true" /> -->
+
 
         <!-- Branch install referrer tracking -->
         <receiver
@@ -75,9 +72,10 @@
         </receiver>
 
         <!-- That's the old branch key I had from my acct -->
-        <!--<meta-data-->
-        <!--android:name="io.branch.sdk.BranchKey"-->
-        <!--android:value="key_live_coDBaiGnKAZN1BRRBj691mbiFAohoMxv" />-->
+        <!-- <meta-data -->
+        <!-- android:name="io.branch.sdk.BranchKey" -->
+        <!-- android:value="key_live_coDBaiGnKAZN1BRRBj691mbiFAohoMxv" /> -->
+
 
         <!-- <meta-data -->
         <!-- android:name="com.google.android.maps.v2.API_KEY" -->
@@ -113,9 +111,8 @@
             <!-- Branch URI scheme -->
             <intent-filter>
                 <data
-                    android:scheme="thesquare"
-                    android:host="open"/>
-
+                    android:host="open"
+                    android:scheme="thesquare" />
 
                 <action android:name="android.intent.action.VIEW" />
 
@@ -272,7 +269,6 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBarMain">
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -314,6 +310,11 @@
             android:enabled="true"
             android:exported="false" />
 
+        <!-- After April 10th -->
+        <activity
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:name=".employer.closejob.CloseJobActivity"/>
     </application>
 
 </manifest>
